updated hello message and added 12341234

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head><meta charset="utf-8"><title>Hello</title></head>
   <body>
-    <h1>Hello</h1>
+    <h1>Hello from VS code!</h1>
+    <h1>123412341234<h1>
     <script>console.log('hello');</script>
   </body>
 </html>
