--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head><meta charset="utf-8"><title>Hello</title></head>
   <body>
-    <h1>Hello from VS code!</h1>
-    <h1>1234123412345678<h1>
+    <h1>Hello - one click push!</h1>
     <script>console.log('hello');</script>
   </body>
 </html>
