auto formatter test

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head><meta charset="utf-8"><title>Hello</title></head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Hello</title>
+  </head>
   <body>
     <h1>Hello - one click push!</h1>
-    <script>console.log('hello');</script>
+    <script>
+      console.log("hello");
+    </script>
   </body>
 </html>
