added links and image of cat

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Hello - one click push!</h1>
+    <p>This is a trial page by pchanggit. I am learning HTML by myself!</p>
+    <a href="https://instagram.com" target="_blank" rel="noopener">Instagram Link</a>
+    <a href="https://www.google.com" target="_blank" rel="noopener">Google Link</a>  
+    <img src="https://t4.ftcdn.net/jpg/02/66/72/41/360_F_266724172_Iy8gdKgMa7XmrhYYxLCxyhx6J7070Pr8.jpg" alt="cat" width="500" height="500">
     <script>
       console.log("hello");
     </script>
