added some CSS style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Hello</title>
+    <style>
+      body{font-family: 'Times New Roman', Times, serif; background-color: skyblue; text-align: center; padding: 10px;}
+      img{border-radius: 50px; align-content: center;}
+    </style>
   </head>
   <body>
     <h1>Hello - one click push!</h1>
