--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <title>Hello</title>
     <style>
-      body{font-family: 'Times New Roman', Times, serif; background-color: skyblue; text-align: center; padding: 10px;}
+      body{font-family: 'Times New Roman', Times, serif; background-color: skyblue; text-align: center; padding: 10px;      display: flex;
+        flex-direction: column;
+        align-items:center; 
+        justify-content:center;
+        min-height: 100vh; 
+        gap: 30px; }
       img{border-radius: 50px; align-content: center;}
+
     </style>
   </head>
   <body>
