--- a/index.html
+++ b/index.html
@@ -9,8 +9,32 @@
         align-items:center; 
         justify-content:center;
         min-height: 100vh; 
-        gap: 30px; }
+        gap: 30px;}
       img{border-radius: 50px; align-content: center;}
+      .button {
+  background: #4f46e5;       
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 18px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: transform 0.15s, background 0.15s;
+}
+
+.button:hover {
+  background: #4338ca;       
+  transform: translateY(-2px);
+}
+
+.button:active {
+  transform: translateY(0);  /* Reset when pressed */
+}
+
+.button:disabled {
+  background: gray;
+  cursor: not-allowed;
+}
 
     </style>
   </head>
@@ -20,6 +44,22 @@
     <a href="https://instagram.com" target="_blank" rel="noopener">Instagram Link</a>
     <a href="https://www.google.com" target="_blank" rel="noopener">Google Link</a>  
     <img src="https://t4.ftcdn.net/jpg/02/66/72/41/360_F_266724172_Iy8gdKgMa7XmrhYYxLCxyhx6J7070Pr8.jpg" alt="cat" width="500" height="500">
+    <div class="links">
+  <button class="button" id="likeBtn">Like Cat</button>
+  <a href="https://placekitten.com/400/300" class="button" target="_blank">Next Cat</a>
+  <button class="button" id="logBtn">Log Message</button>
+</div>
+
+<script>
+  document.getElementById("likeBtn").addEventListener("click", () => {
+    alert("You liked the cat! 🐱");
+  });
+
+  document.getElementById("logBtn").addEventListener("click", () => {
+    console.log("Cat says hi!");
+  });
+</script>
+    <a href="https://lf2.net" class="button">go to lf2</a>
     <script>
       console.log("hello");
     </script>
