--- a/index.html
+++ b/index.html
@@ -4,36 +4,149 @@
     <meta charset="utf-8" />
     <title>Hello</title>
     <style>
-      body{font-family: 'Times New Roman', Times, serif; background-color: skyblue; text-align: center; padding: 10px;      display: flex;
-        flex-direction: column;
-        align-items:center; 
-        justify-content:center;
-        min-height: 100vh; 
-        gap: 30px;}
-      img{border-radius: 50px; align-content: center;}
-      .button {
-  background: #4f46e5;       
-  color: white;
-  border: none;
-  border-radius: 8px;
-  padding: 10px 18px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: transform 0.15s, background 0.15s;
+      /* ===== 2025 baseline ===== */
+* { box-sizing: border-box; }
+:root{
+  --bg-1: #0b1220;
+  --bg-2: #0a0f1a;
+  --text: #e6e8ee;
+  --muted: #b4b9c9;
+  --card: rgba(255,255,255,0.06);
+  --stroke: rgba(255,255,255,0.12);
+  --accent: #7c8cff;           /* indigo-ish */
+  --accent-2: #57e6e6;         /* cyan */
+  --shadow: 0 20px 50px rgba(0,0,0,0.45);
 }
 
-.button:hover {
-  background: #4338ca;       
-  transform: translateY(-2px);
+@media (prefers-color-scheme: light){
+  :root{
+    --bg-1: #f7f8fb;
+    --bg-2: #e9edf7;
+    --text: #151924;
+    --muted: #4b5468;
+    --card: rgba(255,255,255,0.7);
+    --stroke: rgba(10, 20, 40, 0.08);
+    --shadow: 0 10px 30px rgba(20,30,60,0.12);
+  }
 }
 
-.button:active {
-  transform: translateY(0);  /* Reset when pressed */
+html, body { height: 100%; }
+body{
+  margin: 0;
+  font: 16px/1.55 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif;
+  color: var(--text);
+  background:
+    radial-gradient(1200px 600px at 10% -10%, rgba(124,140,255,.25), transparent 60%),
+    radial-gradient(1200px 800px at 110% 20%, rgba(87,230,230,.18), transparent 60%),
+    linear-gradient(180deg, var(--bg-1), var(--bg-2));
+  display: grid;
+  place-items: center;
+  padding: 32px;
 }
 
-.button:disabled {
-  background: gray;
-  cursor: not-allowed;
+/* ===== layout ===== */
+.container{
+  width: min(100%, 980px);
+  display: grid;
+  gap: 28px;
+}
+
+.navbar{
+  display:flex; align-items:center; justify-content:space-between;
+  padding: 14px 18px;
+  backdrop-filter: blur(10px);
+  background: var(--card);
+  border: 1px solid var(--stroke);
+  border-radius: 16px;
+  box-shadow: var(--shadow);
+}
+.brand{ display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px; }
+.brand-dot{
+  width:10px;height:10px;border-radius:50%;
+  background: linear-gradient(135deg, var(--accent), var(--accent-2));
+  box-shadow: 0 0 18px rgba(124,140,255,.8);
+}
+
+.hero{
+  display:grid;
+  gap:22px;
+  padding: 28px;
+  text-align: center;
+  backdrop-filter: blur(12px);
+  background: var(--card);
+  border: 1px solid var(--stroke);
+  border-radius: 20px;
+  box-shadow: var(--shadow);
+}
+
+.hero h1{
+  margin:0;
+  font-size: clamp(28px, 3.2vw, 40px);
+  letter-spacing: .2px;
+}
+.hero p{ margin:0; color: var(--muted); }
+
+.grid{
+  display:grid;
+  gap: 18px;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
+
+/* ===== card & media ===== */
+.card{
+  background: var(--card);
+  border: 1px solid var(--stroke);
+  border-radius: 18px;
+  padding: 18px;
+  transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease;
+  box-shadow: var(--shadow);
+}
+.card:hover{ transform: translateY(-3px); border-color: rgba(124,140,255,.45); }
+
+.hero .avatar{
+  width: 220px; max-width: 60vw; aspect-ratio:1/1; margin: 0 auto;
+  border-radius: 28px;
+  overflow: hidden; position: relative;
+  box-shadow: 0 15px 45px rgba(0,0,0,.35);
+}
+.hero .avatar img{
+  width:100%; height:100%; object-fit: cover;
+  transform: scale(1.01);
+}
+
+/* ===== buttons ===== */
+.actions{ display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
+
+.button{
+  --btn-bg: linear-gradient(135deg, var(--accent), var(--accent-2));
+  --btn-bg-hover: linear-gradient(135deg, var(--accent-2), var(--accent));
+  appearance:none; border:0; color:#081018; font-weight:600;
+  padding: 12px 16px; border-radius: 12px;
+  background: var(--btn-bg);
+  box-shadow: 0 10px 25px rgba(124,140,255,.35);
+  cursor:pointer; text-decoration:none; display:inline-flex; align-items:center; gap:8px;
+  transition: transform .12s ease, box-shadow .12s ease, filter .12s ease, background .2s ease;
+}
+.button:hover{ background: var(--btn-bg-hover); transform: translateY(-2px); filter: brightness(1.05); }
+.button:active{ transform: translateY(0); }
+
+/* ghost / secondary */
+.button.ghost{
+  color: var(--text);
+  background: transparent;
+  border: 1px solid var(--stroke);
+  box-shadow: none;
+}
+.button.ghost:hover{ border-color: rgba(124,140,255,.5); }
+
+/* ===== utilities ===== */
+.m-0{ margin:0 }
+.center{ text-align:center }
+.subtle{ color: var(--muted) }
+
+/* motion safety */
+@media (prefers-reduced-motion: reduce){
+  *{ transition: none !important; animation: none !important; }
 }
 
     </style>
